--- a/config/effort_controller_config.yaml
+++ b/config/effort_controller_config.yaml
@@ -3,66 +3,54 @@ joint_state_controller:
   publish_rate: 50
 
 # Left arm controller
-l_leg_controller:
-  type: effort_controllers/JointTrajectoryController
-  joints:
-    - l_pelvis_joint
-    - l_thigh_pitch_joint
-    - l_thigh_yaw_joint
-    - l_tibia_joint
-    - l_ankle_joint
-    - l_phalange_joint
-  gains:
-    l_pelvis_joint: {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    l_thigh_pitch_joint: {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    l_thigh_yaw_joint:  {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    l_tibia_joint:   {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    l_ankle_joint:    {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    l_phalange_joint:      {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    l_wrist_pitch_joint:    {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
 
-  constraints:
-    goal_time: 5.0
-    stopped_velocity_tolerance: 1.0
-    l_pelvis_joint: {trajectory: 0.2, goal: 0.2}
-    l_thigh_pitch_joint: {trajectory: 0.2, goal: 0.2}
-    l_thigh_yaw_joint: {trajectory: 0.2, goal: 0.2}
-    l_tibia_joint: {trajectory: 0.2, goal: 0.2}
-    l_ankle_joint: {trajectory: 0.2, goal: 0.2}
-    l_phalange_joint: {trajectory: 0.2, goal: 0.2}
 
-  state_publish_rate:  25            # Override default
-  action_monitor_rate: 30            # Override default
-  stop_trajectory_duration: 0        # Override default
+l_thigh_pitch_joint_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: l_thigh_pitch_joint
+    pid: {p: 53000, i: 390, d: 10.0}
 
-# Right arm controller
-r_leg_controller:
-  type: effort_controllers/JointTrajectoryController
-  joints:
-    - r_pelvis_joint
-    - r_thigh_pitch_joint
-    - r_thigh_yaw_joint
-    - r_tibia_joint
-    - r_ankle_joint
-    - r_phalange_joint
-  gains:
-    r_pelvis_joint: {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    r_thigh_pitch_joint: {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    r_thigh_yaw_joint:  {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    r_tibia_joint:   {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    r_ankle_joint:    {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
-    r_phalange_joint:      {p: 100.0, i: 10.0, d: 0.5, i_clamp: 0.0}
 
-  constraints:
-    goal_time: 5.0
-    stopped_velocity_tolerance: 1.0
-    r_pelvis_joint: {trajectory: 0.2, goal: 0.2}
-    r_thigh_pitch_joint: {trajectory: 0.2, goal: 0.2}
-    r_thigh_yaw_joint: {trajectory: 0.2, goal: 0.2}
-    r_tibia_joint: {trajectory: 0.2, goal: 0.2}
-    r_ankle_joint: {trajectory: 0.2, goal: 0.2}
-    r_phalange_joint: {trajectory: 0.2, goal: 0.2}
 
-  state_publish_rate:  25            # Override default
-  action_monitor_rate: 30            # Override default
-  stop_trajectory_duration: 0        # Override default
+l_tibia_joint_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: l_tibia_joint
+    pid: {p: 46000.0, i: 0.1, d: 10.0}
+
+l_ankle_joint_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: l_ankle_joint
+    pid: {p: 26000.0, i: 120, d: 120}
+
+l_phalange_joint_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: l_phalange_joint
+    pid: {p: 200, i: 200, d: 0}
+
+
+
+r_thigh_pitch_joint_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: r_thigh_pitch_joint
+    pid: {p: 53000, i: 390, d: 10.0}
+
+
+
+r_tibia_joint_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: r_tibia_joint
+    pid: {p: 46000.0, i: 0.1, d: 10.0}
+
+r_ankle_joint_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: r_ankle_joint
+    pid: {p: 26000.0, i: 120, d: 120}
+
+r_phalange_joint_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: r_phalange_joint
+    pid: {p: 200, i: 200, d: 0}
+
+#  state_publish_rate:  25            # Override default
+#  action_monitor_rate: 30            # Override default
+#  stop_trajectory_duration: 0        # Override default
